// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`input/input should render an input wrapper with a valid state 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
}

.emotion-0::before,
.emotion-0::after {
  content: '';
  display: block;
  top: 50%;
  position: absolute;
  right: 1rem;
}

.emotion-0::before {
  background-image: url("data:image/svg+xml,%3Csvg width='16' height='16' viewBox='0 0 16 16' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M16 0H0V16H16V0Z' fill='white' fill-opacity='0.01'/%3E%3Cpath d='M3.33301 7.99996L6.66634 11.3333L13.333 4.66663' stroke='white' stroke-width='1.33333' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
  height: 1rem;
  -webkit-transform: translate(-14%, -50%);
  -moz-transform: translate(-14%, -50%);
  -ms-transform: translate(-14%, -50%);
  transform: translate(-14%, -50%);
  width: 1rem;
  z-index: 1;
}

.emotion-0::after {
  background-color: #59BC6F;
  border-radius: 0.625rem;
  height: 1.25rem;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  width: 1.25rem;
}

<div>
  <div
    class="emotion-0"
  />
</div>
`;

exports[`input/input should render an input wrapper with an disabled state 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
}

<div>
  <div
    class="emotion-0"
    disabled=""
  />
</div>
`;

exports[`input/input should render an input wrapper with an error state 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
}

.emotion-0::before,
.emotion-0::after {
  content: '';
  display: block;
  top: 50%;
  position: absolute;
  right: 1rem;
}

.emotion-0::before {
  background-image: url("data:image/svg+xml,%3Csvg width='16' height='16' viewBox='0 0 16 16' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M16 0H0V16H16V0Z' fill='white' fill-opacity='0.01'/%3E%3Cpath d='M4.66699 4.66663L11.3337 11.3333' stroke='white' stroke-width='1.33333' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M4.66699 11.3333L11.3337 4.66663' stroke='white' stroke-width='1.33333' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
  height: 1rem;
  -webkit-transform: translate(-14%, -50%);
  -moz-transform: translate(-14%, -50%);
  -ms-transform: translate(-14%, -50%);
  transform: translate(-14%, -50%);
  width: 1rem;
  z-index: 1;
}

.emotion-0::after {
  background-color: #EB5757;
  border-radius: 0.625rem;
  height: 1.25rem;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  width: 1.25rem;
}

<div>
  <div
    class="emotion-0"
  />
</div>
`;
